# CSCI61

./: .gitignore  README.md
DataStructures/: Animal_Tree_P491.cpp  ArrayunderStack_P369.h  ArrayunderStack_P369_Main.cpp  CMakeLists.txt  CarWash_Queue_P412.cpp  Carwash_Simulator.cpp  Carwash_Simulator.h  HW02PeerReview.cpp  Heap_HW_04.cpp  Odd_Even_Queue_P397.cpp  Office_Hours_HW_02.cpp  Office_Hours_Priority_HW_04.cpp  Palindrome_Queue_P398.cpp  PeerReviewHW03P2.cpp  Peer_Review_HW_05.cpp  Postfix.cpp  Prefix_HW_01.cpp  Queens_Stack_P391.cpp  QueuePop.cpp  ReverseWord.cpp  bag6.cpp  bag6.h  bag6test.cpp  bintree.h  ohclasses3.cpp  ohclasses3.h  set.h  set_main.cpp  stack3.cpp  stack3.h  useful.h
DataStructures/CodeForcesPractice/: CF112_Strings.cpp  CF231_Team.cpp  CF236_Gender.cpp  CF263_Matrix.cpp  CF266_Stone.cpp  CF268_Football.cpp  CF344_Magnets.cpp  CF381_Card.cpp  CF381_Sereja.cpp  CF405_Gravity.cpp  CF427_Police.cpp  CF431Black_Square.cpp  CF443_Letters.cpp  CF59_Word.cpp  CF677_Fence.cpp  CF731_Museum.cpp  CF734_Anton.cpp  CF770_Password.cpp  CF791_Bear.cpp  CF9_Dice.cpp  CMakeLists.txt
DataStructures/btree_hw5/: CMakeLists.txt  HW05_P1_bag_test.cpp  Office_Hours_Map_HW_05.cpp  Office_Hours_Simulator.h  Student.cpp  Student.h  bintree.cpp
DataStructures/btree_hw6/: CMakeLists.txt  set.h  set_array_helper.h  set_main.cpp
DataStructures/graph_hw9/: CMakeLists.txt  HW09Readme.txt  graph.cpp  graph.h  graph2.h  graph2Main.cpp  graphsMain.cpp  words.txt
DataStructures/heaps_hw4/: CMakeLists.txt
DataStructures/queue_book/: CMakeLists.txt  node2.cpp  (+1 more)
(+73 files in other folders)
