cmake_minimum_required(VERSION 3.21)
project(DataStructures)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory("${PROJECT_SOURCE_DIR}/graph_hw9" "${PROJECT_SOURCE_DIR}/graph_hw9/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/searching_hw8" "${PROJECT_SOURCE_DIR}/searching_hw8/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/searching_practice" "${PROJECT_SOURCE_DIR}/searching_practice/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/CodeForcesPractice" "${PROJECT_SOURCE_DIR}/CodeForcesPractice/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/sorting_hw7" "${PROJECT_SOURCE_DIR}/sorting_hw7/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/tree_book" "${PROJECT_SOURCE_DIR}/tree_book/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/queue_book" "${PROJECT_SOURCE_DIR}/queue_book_book/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/stack_book" "${PROJECT_SOURCE_DIR}/stack_book/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/stack_hw1" "${PROJECT_SOURCE_DIR}/stack_hw1/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/queue_hw2" "${PROJECT_SOURCE_DIR}/queue_hw2/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/tree_hw3" "${PROJECT_SOURCE_DIR}/tree_hw3/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/heaps_hw4" "${PROJECT_SOURCE_DIR}/heaps_hw4/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/btree_hw5" "${PROJECT_SOURCE_DIR}/btree_hw5/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/btree_hw6" "${PROJECT_SOURCE_DIR}/btree_hw6/output")



